tests/ui/derive-arbitrary/union/expected
error: Cannot derive `Arbitrary` for `Wrapper` union

|\
| #[derive(kani::Arbitrary)]\
|          ^^^^^^^^^^^^^^^\
|\
note: The derive `Arbitrary` cannot be used for unions such as `Wrapper`

|\
| union Wrapper {\
|       ^^^^^^^\
= note: this error originates in the derive macro `kani::Arbitrary`

Error: "Failed to compile crate."
